--- a/contact.css
+++ b/contact.css
@@ -1,6 +1,15 @@
 
 
 /* NAV BAR */
+@media all and (max-width:768px) {
+  .search {
+    display: none;
+  }
+
+  .logo {
+    display: none;
+  }
+}
 
 @import url('https://fonts.googleapis.com/css?family=Montserrat:500');
 
@@ -37,16 +46,21 @@ nav {
   order: 2;
 }
 .nav-link {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
   list-style: none;
   margin-left: auto;
   margin-right: auto;
   padding-right: 0;
-  
+  padding: 10px;
+  margin: 0;
 }
 .nav-link li {
   display: inline-block;
-  padding: 0px 40px;
-  
+  text-align: center;
+  padding: 0;
 }
 .nav-link li:nth-child(1) {
   padding: 0px 20px 0 0;
