--- a/recipes.css
+++ b/recipes.css
@@ -1,7 +1,18 @@
+@media all and (max-width:768px) {
+  .search {
+    display: none;
+  }
+
+  .logo {
+    display: none;
+  }
+}
+
 .body1 {
     background: url(./recipes.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    padding-top: 7%;
 }
 h1 {
     color: white;
@@ -63,7 +74,6 @@ nav {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-   
 }
 .logo {
   cursor: pointer;
@@ -78,16 +88,21 @@ nav {
   order: 2;
 }
 .nav-link {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
   list-style: none;
   margin-left: auto;
   margin-right: auto;
   padding-right: 0;
-  
+  margin: 0;
+  padding: 10px;
 }
 .nav-link li {
   display: inline-block;
-  padding: 0px 40px;
-  
+  text-align: center;
+  padding: 0;
 }
 .nav-link li:nth-child(1) {
   padding: 0px 20px 0 0;
