--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
 
   .worship {
     width: 90%;
+    z-index: -1;
   }
 }
 
@@ -177,4 +178,8 @@ button:hover {
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.worship {
+  z-index: -1;
 }
